<resources>
	<string name="menu_settings">Settings</string>
    <string name="app_name">趁早手册</string>
    <string name="back">返回</string>
	<string name="regist">注册</string>
	<string name="login">登录</string>
	<string name="account_name">登录名</string>
	<string name="account_pwd">密码</string>
	<string name="new_pwd">新密码</string>
	<string name="re_new_pwd">重复新密码</string>
	<string name="old_pwd">旧密码</string>
	<string name="user_name">用户名</string>
	<string name="rePassWord">重复密码</string>
	<string name="forgetPsw">忘记密码</string>
	<string name="forgetPswclick">忘记密码？</string>
	<string name="changePsw">修改密码</string>
	<string name="setPassword">设置密码</string>
	<string name="setNewPsw">设置新密码</string>
	<string name="captcha">验证码</string>
	<string name="send_captcha">发送验证码</string>
	<string name="captcha_notes">8位验证码已发送到您的注册邮箱</string>
	<string name="notmember">还不是我们的会员?</string>
	<string name="fastregist">注册要趁早</string>
	<string name="email">邮箱</string>
	<string name="submit">提交</string>
	<string name="btn_ok">确定</string>
	<string name="cancel">取消</string>
	<string name="completed">已完成</string>
	<string name="input_null_error">输入不能为空</string>
	<string name="repassword_error">重复密码不一致，请重新输入</string>
	<string name="register_failed">注册失败</string>
	<string name="login_failed">登录失败</string>
	<string name="get_userinfo_failed">获取个人资料信息失败</string>
	<string name="loading">加载中...</string>
	<string name="sent_captcha_failed">验证码发送失败</string>
	<string name="reset_password_failed">重置密码失败</string>
	<string name="reset_password_success">重置密码成功</string>
	<string name="change_password_failed">修改密码失败</string>
	<string name="change_password_success">修改密码成功</string>
	<string name="no_data">暂无数据</string>
	<string name="storge_message">存储信息</string>
	<string name="upload_failed">上传失败</string>
	<string name="upload_success">恭喜你！上传成功！</string>
	<string name="select_from_camera">拍照</string>
	<string name="select_from_album">从手机相册选择</string>
	<string name="pls_insert_sdcard">请插入存储卡</string>
	<string name="camera_not_allowed">相机不可用</string>
	<string name="media_not_allowed">相册不可用</string>
	<string name="have_no_enough_external_space">存储卡空间不足</string>
	<string name="year">年</string>
	<string name="month">月</string>
	<string name="day">日</string>
	<string name="hour">时</string>
	<string name="hour_full_name">小时</string>
	<string name="concent">专注</string>
	<string name="minute">分</string>
	<string name="voice_record_err">录音异常，请重录</string>
	<string name="save">保存</string>
	<string name="lable_message">标签信息</string>
	<string name="no_search_data">没有搜索到相关记录</string>
	<string name="no_more_data">没有更多数据啦</string>
	<string name="delete_confirm">确定要删除这张图片？</string>
	<string name="submit_confirm">提交后将不能修改</string>
	<string name="update_schedule">更新进度</string>
	<string name="update_schedule_notice">今天完成的怎么样？</string>
	<string name="update_schedule_input_notice">当前心情，鼓励一下自己吧</string>
	<string name="save_and_share_weichat">保存并分享到微信</string>
	<string name="no_change_submit_notice">您还没有记录任何内容</string>
	<string name="current_days">天</string>
	<string name="update_food_notice">今天有没有吃负能量食品</string>
	<string name="day_index">倒数第%d天</string>
	<string name="customize_food">负能量：</string>
	<string name="new_task">新建任务</string>
	<string name="share_WX_new_task">我使用趁早手册app为自己创建一个新的任务 :【%1$s】 \n%2$s</string>
	<string name="share_WX_update">我正在使用趁早手册app记录我的任务:【%1$s】\n今天是第%2$s天, %3$s  现在总完成度是%4$s, 小伙伴们, 继续加油!</string>
	<string name="update_notice">非常抱歉，您需要更新应用才能继续使用</string>		
					
	<string name="login_account_name_tips">邮箱/手机号</string>
	<string name="login_account_pwd_tips">请输入密码</string>
		
	<string name="scanning">扫一扫</string>
	<string name="scan_hint">请扫描二维码</string>
	
	<string name="file_store_qrcode_decription">你扫描的是未使用过的标签，你可以将手机中的图片声音文件存入这个标签，并可以附带512字的文本记录。</string>
	<string name="select_pictures">从相册选取图片</string>
	<string name="start_record">按住录音</string>
	<string name="stop_record">松开结束</string>
	<string name="input_characters_hint">记录一下现在的心情吧</string>
		
	<string name="image_text_button_des">图片文字按钮</string>
	
	<string name="text_limit">(0/512)</string>
	
	<string name="task_scheduler_tile">私人定制</string>
	<string name="task_scheduler_history">我的历程</string>
	<string name="task_scheduler_daily_update">今日更新</string>
	<string name="detail_title_bar_string">任务详情及更新</string>
	<string name="detail_tile">标题</string>
	<string name="detail_intro">任务说明</string>
	<string name="detail_start_time">开始时间</string>
	<string name="detail_end_time">结束时间</string>
	<string name="detail_remind_time">任务提醒</string>
	<string name="detail_update_remind_time">更新提醒</string>
	<string name="detail_remind_repeat">重复提醒</string>
	<string name="detail_concent_time">专注时长</string>
	<string name="detail_words_for_success">写给任务完成时的自己</string>
	<string name="detail_invalid_date">结束时间不能早于开始时间</string>
	<string name="detail_no_start_time">起始时间不能为空</string>
	<string name="detail_no_end_time">结束时间不能为空</string>
	<string name="detail_no_remind_time1">提醒一已开启，提醒时间不能为空</string>
	<string name="detail_no_remind_time2">提醒二已开启，提醒时间不能为空</string>
	<string name="detail_no_title">标题不能为空</string>
	<string name="detail_cannot_change_progress">任务还没开始，不能手动调整完成进度</string>
	<string name="detail_save_share">保存并分享到微信</string>
	<string name="detail_show_histroy">我的历程</string>
	<string name="detail_task_title_too_long">“标题“内容超过最大限制</string>
	<string name="detail_task_note_too_long">“任务说明“内容超过最大限制</string>
	<string name="detail_task_complete_words_too_long">”写给完成时的自己“内容超过最大限制</string>
	<string name="alarm_alert_dialog_title_todo">时间看得见</string>
	<string name="alarm_alert_dialog_title_update">快记录下今天的完成情况吧</string>
	<string name="alarm_alert_dialog_dismiss_button">暂不记录</string>
	<string name="alarm_alert_dialog_todo_button">查看任务</string>
	<string name="alarm_alert_dialog_ok_button">确定</string>
	<string name="alarm_alert_dialog_content_todo">成为期待中的自己</string>
	<string name="alarm_alert_dialog_content_update">离梦想更近了一步</string>
	<string name="my_dailyupdates">我的历程</string>
	<string name="has_updated">今天已经更新过啦</string>
	<string name="task_100day_intro">塑身100天是一个“变身游戏”，如果你真的渴望变身，那么过去的那个你，是时候可以消失了。</string>
	<string name="start_task">开始任务吧</string>
	<string name="restart_task">重新开始</string>
	<string name="task_100day_title">跟潇洒姐塑身100天</string>
	<string name="task_100day_note">按照潇洒姐的每日一图循序渐进完成任务</string>
	<string name="delete_task">删除本任务</string>
	<string name="delete_task_failed">删除任务失败</string>
	<string name="delete_task_success">删除任务成功</string>
	<string name="camera_error">打开摄像头失败</string>
	<string name="delete_warning">任务删除后该任务所有数据都会删掉，确定删除？</string>
		
	<string name="test">test</string>
    <!-- 图片多选界面 相册-->
    <string name="photo_album_bucket_title">相册</string>
    <string name="photo_album_loading">加载中...</string>
    <string name="photo_album_empty_message">没有照片\n你可以使用相机拍些照片</string>
    <string name="photo_album_save">确认</string>
    <string name="photo_album_save_number">确认\n%1$d/%2$d</string>
    <string name="photo_album_file_deiete">图片已删除</string>
	
    <!-- 侧滑栏 -->
     <string name="default_nick_name">趁早工具</string>
    <string name="personal_task">私人定制</string>
    <string name="official_task">官方推荐</string>
    <string name="qrcode_list">浏览手册</string>
    <string name="chenzao_web">趁早网站</string>
    <string name="chenzao_store">趁早小店</string>
    <string name="setting">设置</string>
    
    <string name="personal_setting">个人设置</string>
    <string name="about_us">关于我们</string>
    <string name="feed_back">意见反馈</string>
    <string name="logout">注销用户</string>
    <string name="user_info">用户资料</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="constellation">星座</string>
    <string name="protrait">头像</string>
    <string name="default_age">27</string>
    <string name="expecting_myself">期待中的自己</string>
    <string name="please_select">请选择</string>
    
    <string name="version">Version</string>
    <string name="copy_right">Copyright © 2014 Chenzao</string>
    <string name="about_notice">请将您使用中出现的问题以及对产品功能的意见与建议, 发送至 app_support@chenzao.cn 谢谢!</string>
    
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    
    <string name="ChenzaoIOException">无法连接到网络，请检查网络配置</string>
    <string name="OthersException">未知错误</string>
    <string name="ChenzaoParseException">服务器数据异常</string>
    
    <!-- 下拉刷新 -->
    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>

    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>

	<string name="change">修改</string>
</resources>