<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    >
    
    <ImageView 
        android:id="@+id/about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        />
	
    <TextView 
        android:id="@+id/about_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/color_red"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:layout_below="@id/about_logo"
        />
        
    <TextView 
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:layout_below="@id/about_app_name"
        android:textColor="@color/color_red"
        />
     <TextView 
        android:id="@+id/about_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_right"
        android:textSize="16sp"
        android:textColor="@color/color_gray"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        />
    <TextView 
        android:id="@+id/about_notice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_gray"
        android:layout_above="@id/about_copyright"
        android:text="@string/about_notice"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>