<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
	android:background="@drawable/common_bg"
    >

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView 
		    android:id="@+id/captcha_notes"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/captcha_notes"
		    android:textColor="@color/color_gray"
			android:layout_marginTop="30dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
		    />
		<RelativeLayout 
			android:id="@+id/input_captcha_layout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/captcha_notes"
			android:layout_marginTop="15dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			>
			<EditText
				android:id="@+id/etCaptcha"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/login_input_height"
				android:background="@drawable/input_style"
				android:hint="@string/captcha"
				android:imeOptions="actionNext"
				android:textColor="@color/color_gray"
				android:textColorHint="@color/color_gray"
				android:textSize="@dimen/input_text_size"
				android:paddingLeft="@dimen/login_input_padding_left"
				android:maxLength="64"
				android:singleLine="true"
				/>
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/login_input_icon_marginleft"
				android:layout_alignLeft="@id/etCaptcha"
				android:layout_centerVertical="true"
				android:background="@drawable/icon_code"
				/>
        </RelativeLayout>

		<RelativeLayout 
			android:id="@+id/input_newPw_layout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/input_captcha_layout"
			android:layout_marginTop="15dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			>
			<EditText
				android:id="@+id/etNewPd"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/login_input_height"
				android:background="@drawable/input_style"
				android:hint="@string/new_pwd"
				android:imeOptions="actionNext"
				android:textColor="@color/color_gray"
				android:textColorHint="@color/color_gray"
				android:textSize="@dimen/input_text_size"
				android:paddingLeft="@dimen/login_input_padding_left"
				android:maxLength="64"
				android:singleLine="true"
				android:inputType="textPassword"
				/>
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/login_input_icon_marginleft"
				android:layout_alignLeft="@id/etNewPd"
				android:layout_centerVertical="true"
				android:background="@drawable/icon_pw"
				/>
        </RelativeLayout>
				
		<RelativeLayout 
			android:id="@+id/input_repw_layout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/input_newPw_layout"
			android:layout_marginTop="15dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			>
			<EditText
				android:id="@+id/etRePwd"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/login_input_height"
				android:background="@drawable/input_style"
				android:hint="@string/re_new_pwd"
				android:imeOptions="actionNext"
				android:textColor="@color/color_gray"
				android:textColorHint="@color/color_gray"
				android:textSize="@dimen/input_text_size"
				android:paddingLeft="@dimen/login_input_padding_left"
				android:maxLength="64"
				android:singleLine="true"
				android:inputType="textPassword"
				/>
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/login_input_icon_marginleft"
				android:layout_alignLeft="@id/etRePwd"
				android:layout_centerVertical="true"
				android:background="@drawable/icon_pw"
				/>
        </RelativeLayout>

		<Button
			android:id="@+id/bnSubmit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/input_repw_layout"
			android:layout_centerHorizontal="true"
			android:text="@string/setPassword"
			android:textSize="18sp"
            android:textColor="@color/color_white"
			android:layout_marginTop="30dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			android:background="@drawable/button_selector"/>
			
	</RelativeLayout>
    

</ScrollView>