<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    >
    <RelativeLayout 
        android:id="@+id/rl_edit_user_info"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        >
        <RelativeLayout 
            android:id="@+id/user_info" 
        	android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/settings_bg"
            >

	        <RelativeLayout 
	            android:id="@+id/rl_gender" 
	        	android:layout_width="match_parent"
				android:layout_height="50dp"
		    	android:layout_marginLeft="20dp"
		    	android:layout_marginRight="20dp"
	            >
	            <TextView
	                android:id="@+id/tv_gender"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/gender"
					android:textSize="22sp"
					android:textColor="@color/color_red"
					android:layout_centerVertical="true"
					android:layout_alignParentLeft="true"
	                />
	            
	            <ImageView 
	                android:id="@+id/iv_gender_male"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:src="@drawable/settings_m_icon_sel"
					android:layout_centerVertical="true"
	                />
	            
	            <ImageView 
	                android:id="@+id/iv_gender_female"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/iv_gender_male"
					android:layout_marginRight="40dp"
					android:src="@drawable/settings_f_icon"
					android:layout_centerVertical="true"
	                />  
	        </RelativeLayout>
	        
	        <ImageView 
	            android:id="@+id/iv_divid_1"
	            android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/line"
				android:layout_below="@id/rl_gender"
				android:layout_alignLeft="@id/rl_gender"
				android:layout_alignRight="@id/rl_gender"
	            />
	        
	        <RelativeLayout 
	            android:id="@+id/rl_age" 
	        	android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_below="@id/iv_divid_1"
		    	android:layout_marginLeft="20dp"
		    	android:layout_marginRight="20dp"
	            >
	            <TextView
	                android:id="@+id/tv_age"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/age"
					android:textSize="22sp"
					android:textColor="@color/color_red"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
	                />
	            
	            <ImageView 
	                android:id="@+id/iv_age_edit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:src="@drawable/settings_arrow"
					android:layout_centerVertical="true"
	                />
	            
	            <TextView 
	                android:id="@+id/tv_my_age"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/iv_age_edit"
					android:layout_marginRight="20sp"
					android:text="@string/default_age"
					android:textSize="22sp"
					android:textColor="@color/color_red"
					android:layout_centerVertical="true"
	                />  
	        </RelativeLayout>
	        
	        <ImageView 
	            android:id="@+id/iv_divid_2"
	            android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/line"
				android:layout_below="@id/rl_age"
				android:layout_alignLeft="@id/rl_age"
				android:layout_alignRight="@id/rl_age"
	            />
	                
	        <RelativeLayout 
	            android:id="@+id/rl_constellation" 
	        	android:layout_width="match_parent"
				android:layout_height="50dp"
				android:layout_below="@id/iv_divid_2"
		    	android:layout_marginLeft="20dp"
		    	android:layout_marginRight="20dp"
	            >
	            <TextView
	                android:id="@+id/tv_constellation"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/constellation"
					android:textSize="22sp"
					android:textColor="@color/color_red"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true"
	                />
	            
	            <ImageView 
	                android:id="@+id/iv_constellation_edit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:src="@drawable/settings_arrow"
					android:layout_centerVertical="true"
	                />
	            
	            <TextView 
	                android:id="@+id/tv_my_constellation"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/iv_constellation_edit"
					android:layout_marginRight="20sp"
					android:text="@string/constellation"
					android:textSize="22sp"
					android:textColor="@color/color_red"
					android:layout_centerVertical="true"
	                />  
	        </RelativeLayout>
        </RelativeLayout>
	    
		<RelativeLayout 
		    android:id="@+id/rl_edit"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/settings_bg"
		    android:layout_below="@id/user_info"
		    android:paddingTop="20dp"
		    android:paddingBottom="20dp"
		    >
	        <TextView 
	            android:id="@+id/tv_des"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20sp"
				android:text="@string/expecting_myself"
				android:textSize="22sp"
				android:textColor="@color/color_red"
				android:paddingBottom="10sp"
	            />
	        
		    <EditText 
		        android:id="@+id/individuality_signature"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		    	android:layout_marginRight="20dp"
		        android:lines="3"
		        android:background="@drawable/input_style"
		        android:hint="@string/alarm_alert_dialog_content_todo"
		        android:layout_below="@id/tv_des"
		        />
		</RelativeLayout>
	</RelativeLayout>
</ScrollView>