<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/common_bg"
	android:scrollbars="none">
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<RelativeLayout 
			android:id="@+id/input_user_layout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:layout_marginTop="30dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			>
			<EditText
				android:id="@+id/etUsername"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/login_input_height"
				android:background="@drawable/input_style"
				android:hint="@string/user_name"
				android:imeOptions="actionNext"
				android:textColor="@color/color_gray"
				android:textColorHint="@color/color_gray"
				android:textSize="@dimen/input_text_size"
				android:paddingLeft="@dimen/login_input_padding_left"
				android:maxLength="64"
				android:singleLine="true"
				/>
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/login_input_icon_marginleft"
				android:layout_alignLeft="@id/etUsername"
				android:layout_centerVertical="true"
				android:background="@drawable/icon_user"
				/>
        </RelativeLayout>

		<RelativeLayout 
			android:id="@+id/input_pw_layout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/input_user_layout"
			android:layout_marginTop="15dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			>
			<EditText
				android:id="@+id/etPwd"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/login_input_height"
				android:background="@drawable/input_style"
				android:hint="@string/account_pwd"
				android:imeOptions="actionNext"
				android:textColor="@color/color_gray"
				android:textColorHint="@color/color_gray"
				android:textSize="@dimen/input_text_size"
				android:paddingLeft="@dimen/login_input_padding_left"
				android:maxLength="64"
				android:singleLine="true"
				android:inputType="textPassword"
				/>
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/login_input_icon_marginleft"
				android:layout_alignLeft="@id/etPwd"
				android:layout_centerVertical="true"
				android:background="@drawable/icon_pw"
				/>
        </RelativeLayout>
				
		<RelativeLayout 
			android:id="@+id/input_repw_layout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/input_pw_layout"
			android:layout_marginTop="15dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			>
			<EditText
				android:id="@+id/etRePwd"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/login_input_height"
				android:background="@drawable/input_style"
				android:hint="@string/rePassWord"
				android:imeOptions="actionNext"
				android:textColor="@color/color_gray"
				android:textColorHint="@color/color_gray"
				android:textSize="@dimen/input_text_size"
				android:paddingLeft="@dimen/login_input_padding_left"
				android:maxLength="64"
				android:singleLine="true"
				android:inputType="textPassword"
				/>
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/login_input_icon_marginleft"
				android:layout_alignLeft="@id/etRePwd"
				android:layout_centerVertical="true"
				android:background="@drawable/icon_pw"
				/>
        </RelativeLayout>

		<RelativeLayout 
			android:id="@+id/input_email_layout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/input_repw_layout"
			android:layout_marginTop="15dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			>
			<EditText
				android:id="@+id/etEmail"
				android:layout_width="fill_parent"
				android:layout_height="@dimen/login_input_height"
				android:background="@drawable/input_style"
				android:hint="@string/email"
				android:imeOptions="actionNext"
				android:textColor="@color/color_gray"
				android:textColorHint="@color/color_gray"
				android:textSize="@dimen/input_text_size"
				android:paddingLeft="@dimen/login_input_padding_left"
				android:maxLength="64"
				android:singleLine="true"
				android:inputType="textEmailAddress"
				/>
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/login_input_icon_marginleft"
				android:layout_alignLeft="@id/etEmail"
				android:layout_centerVertical="true"
				android:background="@drawable/icon_email"
				/>
        </RelativeLayout>
				
		<Button
			android:id="@+id/bnSubmit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/input_email_layout"
			android:layout_centerHorizontal="true"
			android:text="@string/regist"
			android:textSize="18sp"
            android:textColor="@color/color_white"
			android:layout_marginTop="30dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="30dp"
			android:background="@drawable/button_selector"/>
			
	</RelativeLayout>
</ScrollView>